karnc/tests/fixtures/negative/146_adapter_consumes_context/src/logging.karn
context logging {
  exports capability { Log }

  capability Log {
    fn info(msg: String) -> Effect[()]
  }

  provides Log = SilentLog {
    fn info(msg: String) -> Effect[()] {
      ()
    }
  }
}
